--- a/rl-transaction-processor/src/main/resources/application.properties
+++ b/rl-transaction-processor/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=rl-transaction-processor
+server.port=8091
+
+spring.kafka.consumer.bootstrap-servers=http://localhost:9092
+spring.kafka.consumer.group-id=my_group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.redlink.challenge.rl_transaction_processor.model.event*
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
