--- a/rl-transaction-commander/src/main/resources/application.properties
+++ b/rl-transaction-commander/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=rl-transaction-commander
 server.port=8090
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=http://localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
