--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,19 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  rl-transaction-commander:
+    build:
+      context: ./rl-transaction-commander
+    ports:
+      - "8090:8090"
+    depends_on:
+      - kafka
+
+  rl-transaction-processor:
+    build:
+      context: ./rl-transaction-processor
+    ports:
+      - "8091:8091"
+    depends_on:
+      - kafka
